@@ -1,1 +1,1 @@
-../../../resources/icons
+../neosurf/icons
