@@ -1,1 +1,1 @@
-../../../resources/license.html
+../neosurf/license.html
