@@ -1,1 +1,1 @@
-../../../resources/welcome.html
+../neosurf/welcome.html
